# rust-web

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Rocket.bss.toml  build.sh  deploy-init.sh  deploy.sh  log4rs.cronjob.yaml  rust-toolchain.toml
aliyun-helper/: Cargo.toml
datastructure/: Cargo.toml
datastructure/src/: array.rs  handle.rs  lib.rs
feishu-api/: .gitignore  Cargo.toml
feishu-api/src/: lib.rs
feishu-api/src/api/: auth.rs  message.rs  mod.rs
feishu-api/src/sdk/: mod.rs
game-backend/: Cargo.toml  log4rs.yaml
game-backend/src/: lib.rs
game-backend/src/biz/: mod.rs
game-backend/src/biz/furuyoni/: data.rs  game.rs  mod.rs  room.rs
game-backend/src/biz/hearthstone/: card_action_interpreter.rs  consts.rs  db_cache.rs  game.rs  mod.rs  model.rs  room.rs  test.rs
game-backend/src/common/: input.rs  room.rs
game-backend/src/handler/: join_room.rs  mod.rs  room_interactive.rs
game-backend/src/rpc/: bss.rs
game-modules/heartstone/: Cargo.toml
game-modules/heartstone/cli/: Cargo.toml
game-modules/heartstone/cli/src/: main.rs  offline.rs  online.rs
game-modules/heartstone/src/: api.rs  game.rs  interpreter.rs  lib.rs  model.rs  player.rs
idl-gen/: Cargo.toml  build.rs  volo.yml
idl-gen/src/: lib.rs
lib/idl-gen/: Cargo.toml  build.rs  volo.yml
lib/idl-gen/src/: lib.rs
server-common/: Cargo.toml
server-common/src/: lib.rs
server-common/src/db/: bound_separated.rs  context.rs  count.rs  dbtype.rs  mod.rs  pool.rs
server-common/src/external_api/: aliyun.rs
server-common/src/rpc_client/: mod.rs
server-lib/bilibili-api/: Cargo.toml
server-lib/bilibili-api/src/: bangumi.rs  lib.rs
server-lib/web-db/: Cargo.toml
server-lib/web-db/src/: bilibili.rs  event.rs  furuyoni.rs  hearthstone.rs  lib.rs  mc_config.rs  user.rs
server/core-rpc/: Cargo.toml
server/core-rpc/src/: main.rs
server/core-rpc/src/handler/: create_github_activity_event.rs  list_display_event.rs  list_github_activity_event.rs  mod.rs
server/game-backend/: Cargo.toml
server/game-backend/src/: main.rs
server/game-backend/src/biz/: mod.rs
server/game-backend/src/biz/furuyoni/: dal.rs  room.rs
server/game-backend/src/biz/hearthstone/: behavior.rs  mod.rs  notifier.rs  room.rs
server/game-backend/src/common/: input.rs  mod.rs  room.rs
server/game-backend/src/handler/: join_room.rs  room_interactive.rs
server/game-backend/src/rpc/: bff.rs  mod.rs
server/server-api/: Cargo.toml
server/server-api/src/: main.rs
server/server-api/src/extract/: encrypt_request.rs  error.rs  mod.rs  response.rs
server/server-api/src/handler/: home.rs  mc.rs  mod.rs  oss.rs  user.rs  validate.rs
server/server-api/src/middleware/: mod.rs  web_cache.rs
server/server-api/src/model/: bizerror.rs  home.rs  mc.rs  mod.rs  oss.rs  user.rs
server/server-api/src/service/: token.rs
server/server-core-rpc/: Cargo.toml
server/server-core-rpc/src/: main.rs
server/server-core-rpc/src/dao/: display_event.rs  github_activity_event.rs  mod.rs  user.rs
server/server-core-rpc/src/handler/: event.rs  mod.rs  user.rs
server/server-core-rpc/src/service/: event.rs  user.rs
server/server-cronjob/: Cargo.toml
server/server-cronjob/src/: main.rs
server/server-cronjob/src/api/github/: repository.rs
server/server-cronjob/src/biz/: fetch_github_activity.rs  mod.rs  update_mc_version.rs
server/server-gateway/: Cargo.toml
server/server-gateway/src/: main.rs
server/server-mc/: Cargo.toml
server/server-mc/src/: main.rs
server/server-mc/src/dao/: mod.rs  server_config.rs  version.rs
server/server-mc/src/handler/: mod.rs  process.rs  server_config.rs  version.rs
server/server-mc/src/process/: callback.rs  communicate.rs  lifecycle.rs  manager.rs  mod.rs  status.rs
server/server-mc/src/service/: mod.rs  process.rs  server_config.rs  version.rs
server/web-bff/: Cargo.toml
server/web-bff/src/: boot.rs  handler_api.rs  handler_grpc.rs  main.rs
server/web-bff/src/biz/: home.rs  mc.rs  mod.rs  user.rs
server/web-bff/src/biz/grpc/: send_game_event.rs  send_room_chat.rs  send_room_common_change.rs
server/web-bff/src/model/: mod.rs
server/web-bff/src/rpc/: core_rpc.rs  game.rs  mod.rs
server/web-bff/src/service/: game.rs
server/web-bff/src/util/: http_decode.rs  protobuf.rs
server/web-bff/src/ws/: game.rs
server/web-cronjob/: Cargo.toml
server/web-cronjob/config/: bangumi_card_template.json
server/web-cronjob/src/: main.rs
server/web-cronjob/src/api/: mod.rs
server/web-cronjob/src/biz/: fetch_bilibili_bangumi.rs  fetch_github_activity.rs  mod.rs  refresh_mc_advancement.rs
web-bss/: Cargo.toml  Rocket.toml
web-bss/src/: boot.rs  handler_api.rs  handler_grpc.rs  main.rs
web-bss/src/biz/: heartstone.rs  home.rs  mc.rs  mod.rs  oss.rs
web-bss/src/biz/grpc/: mod.rs  send_room_chat.rs  send_room_common_change.rs
web-bss/src/dao/: event.rs  mod.rs
web-bss/src/model/: mc.rs  mod.rs
web-bss/src/service/: game.rs  mc.rs
web-bss/src/util/: http_decode.rs  mod.rs  protobuf.rs
web-bss/src/ws/: game.rs  mod.rs
web-cronjob/: Cargo.toml
web-cronjob/src/: main.rs
web-cronjob/src/api/: mod.rs
web-cronjob/src/api/github/: activity.rs
web-cronjob/src/biz/: fetch_bilibili_bangumi.rs  fetch_github_activity.rs  mod.rs  refresh_mc_advancement.rs
web-db/: Cargo.toml
web-db/src/: bilibili.rs  furuyoni.rs  hearthstone.rs  lib.rs  user.rs
web-fe/: .gitignore  Cargo.toml  index.html
web-fe/src/: main.rs  rt.rs
web-fe/src/component/: canvas.rs  mod.rs  navbar.rs  title.rs
web-fe/src/config/: secret.rs
web-fe/src/fw/: game.rs
web-fe/src/model/: home.rs  mc.rs  mod.rs
web-fe/src/page/: dev_tools.rs  game_number_tower.rs  heartstone_2v2.rs  home.rs  local_config.rs  mc_advancement.rs  mod.rs  not_found.rs  totp.rs  wuwa_gacha.rs
web-fe/src/sys/bootstrap/: modal.rs
web/web-www/: Cargo.toml  index.html
web/web-www/src/: main.rs
web/web-www/src/component/: canvas.rs  mod.rs
web/web-www/src/model/: home.rs  mc.rs  mod.rs  oss.rs
web/web-www/src/page/: dev_tools.rs  home.rs  local_config.rs  mc_server.rs  mod.rs  totp.rs
(+69 files in other folders)
