[workspace]
members = [
  "common",
  "server-common",
  "server/server-api",
  "server/server-core-rpc",
  "server/server-cronjob",
  "server/server-mc",
  "web/web-www",
]
resolver = "2"

# [profile.release.package."web-fe"]
# debug = 0
# debug-assertions = false
# incremental = false
# opt-level = 'z'
# overflow-checks = true
# strip = "debuginfo"
