[package]
edition = "2021"
name = "datastructure"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastructure_macro_derive = {path = "datastructure_macro_derive"}
tokio = { version = "1.35.0", features = ["sync"] }
