[package]
edition = "2021"
name = "feishu-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
reqwest = {version = "0.11.17", features = ["json", "multipart"]}
serde = {version = "1.0.163", features = ["rc", "derive"]}
serde_json = "1.0.96"
time = {version = "0.3.21", features = ["serde", "macros", "parsing", "formatting"]}
tokio = {version = "1.32.0", features = ["full"]}
