[package]
name = "game_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idl-gen = { path = "../idl-gen" }
web-db = { path = "../web-db" }
datastructure = { path = "../datastructure" }

volo = "*"
volo-grpc = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"]}
log = "0.4.17"
log4rs = "1.2.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.164"
serde_json = "1.0.99"
protobuf = "3.2.0"
async-recursion = "1.0.4"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
