[package]
name = "idl-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = "*"
volo-grpc = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"]}

[build-dependencies]
volo-build = "*"
