[package]
edition = "2021"
name = "server-common"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.95", features = ["backtrace"]}
bytes = "1.9.0"
chrono = "0.4.39"
common = {path = "../common"}
const_format = "0.2.34"
futures = "0.3.31"
hmac-sha256 = "1.1.8"
itertools = "0.14.0"
log = "0.4.25"
reqwest = {version = "0.12.12", features = ["stream"]}
secrecy = "0.10.3"
sqlx = {version = "0.8.3", features = ["runtime-tokio", "mysql"]}
thiserror = "2.0.11"
tokio = "1.43.0"
tonic = "0.12.3"
tracing = "0.1.41"
urlencoding = "2.1.3"
uuid = {version = "1.12.1", features = ["v4"]}
