[package]
name = "web-cronjob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.6"
time = { version = "0.3.21", features = ["serde", "macros", "parsing", "formatting"]}
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
log4rs = "1.2.0"
reqwest = { version = "0.11.17", features = ["json"] }
web-db = { path = "../web-db" }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
serde = { version = "1.0.163", features = ["rc"]}
serde_json = "1.0.96"
