[package]
edition = "2021"
name = "web-fe"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
base32 = "0.4.0"
gloo-net = "0.2"
gloo-timers = "0.2.6"
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
js-sys = "0.3.66"
log = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
time = {version = "0.3.21", features = ["serde", "formatting"]}
totp-lite = "2.0.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.64", features = ["HtmlCanvasElement", "HtmlTextAreaElement", "CanvasRenderingContext2d", "TextMetrics", "Navigator", "Clipboard"]}
yew = {version = "0.20", features = ["csr"]}
yew-router = "0.17"

[profile.release]
debug = 0
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = true
panic = 'unwind'
rpath = false
strip = "debuginfo"
