[package]
edition = "2021"
name = "web-fe"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
base32 = "0.5.1"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
js-sys = "0.3.66"
log = "0.4.6"
serde = {version = "1.0", features = ["derive"]}
time = {version = "0.3.21", features = ["serde", "formatting"]}
totp-lite = "2.0.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement", "HtmlTextAreaElement", "CanvasRenderingContext2d", "TextMetrics", "Navigator", "Clipboard"] }
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18"
