[package]
edition = "2021"
name = "idl-gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pilota = "*"
volo = "*"
volo-grpc = "*"

anyhow = "1"
async-trait = "0.1"
futures = "0.3"
protobuf = "3.2.0"
tokio = {version = "1", features = ["full"]}

[build-dependencies]
protobuf-codegen = "3.2.0"
volo-build = "*"
