[package]
edition = "2021"
name = "bilibili-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
reqwest = {version = "0.11.17", features = ["json"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
tokio = "1.33.0"
