[package]
edition = "2021"
name = "web-db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.96"
sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "mysql"]}
tokio = "1.28.1"
