[package]
edition = "2021"
name = "core-rpc"
version = "0.1.0"

[dependencies]
idl-gen = {path = "../../lib/idl-gen"}
web-db = {path = "../../server-lib/web-db"}

pilota = "*"
volo = "*"
volo-grpc = "*"

anyhow = "1"
log = "0.4.17"
log4rs = "1.2.0"

tokio = {version = "1", features = ["full"]}
chrono = "0.4.39"
