[package]
edition = "2021"
name = "game-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastructure = {path = "../../lib/datastructure"}
idl-gen = {path = "../../lib/idl-gen"}
web-db = {path = "../../server-lib/web-db"}

pilota = "*"
volo = "*"
volo-grpc = "*"

anyhow = "1"
async-recursion = "1.0.4"
async-trait = "0.1"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
protobuf = "3.2.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.164"
serde_json = "1.0.99"
tokio = {version = "1", features = ["full"]}
