[package]
edition = "2021"
name = "server-api"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.95", features = ["backtrace"]}
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
common = {path = "../../common"}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
server-common = {path = "../../server-common"}
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
