[package]
edition = "2021"
name = "server-core-rpc"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
chrono = "0.4.39"
common = {path = "../../common"}
futures-util = "0.3.31"
server-common = {path = "../../server-common"}
sqlx = {version = "0.8.3", features = ["mysql", "chrono"]}
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
