[package]
edition = "2021"
name = "server-cronjob"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.95", features = ["backtrace"]}
bytes = "1.5.0"
chrono = "0.4.39"
clap = {version = "4.2.7", features = ["derive"]}
common = {path = "../../common"}
futures-util = "0.3.31"
log = "0.4.6"
log4rs = "1.2.0"
reqwest = {version = "0.11.17", features = ["json"]}
serde = {version = "1.0.163", features = ["rc"]}
serde_json = "1.0.96"
server-common = {path = "../../server-common"}
sqlx = {version = "0.8.3", features = ["mysql", "chrono"]}
time = {version = "0.3.21", features = ["serde", "macros", "parsing", "formatting"]}
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
