[package]
edition = "2024"
name = "server-gateway"
version = "0.1.0"

[dependencies]
deadpool = {version = "0.12.2", default-features = false, features = [
  "managed",
  "rt_tokio_1",
]}
http = "1.3.1"
hyper = {version = "1.6.0", features = ["http1", "http2", "server", "client"]}
hyper-util = {version = "0.1.14", features = ["tokio"]}
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
tokio = {version = "1.45.1", features = ["full"]}
tokio-rustls = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
