[package]
edition = "2021"
name = "server-mc"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.95", features = ["backtrace"]}
chrono = {version = "0.4.39", features = ["serde"]}
common = {path = "../../common"}
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = {version = "0.12.12", features = ["json"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
server-common = {path = "../../server-common"}
sqlx = {version = "0.8.3", features = ["mysql", "chrono"]}
strum_macros = "0.26.4"
tokio = {version = "1.43.0", features = ["full"]}
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.2.2"
