[package]
edition = "2021"
name = "web-bff"
version = "0.1.0"

[dependencies]
aliyun-helper = {path = "../../server-lib/aliyun-helper"}
feishu-api = {path = "../../server-lib/feishu-api"}
idl-gen = {path = "../../lib/idl-gen"}
web-db = {path = "../../server-lib/web-db"}

anyhow = "1.0"
async-trait = "0.1.74"
base64 = "0.21.2"
lazy_static = "1.4.0"
log = "0.4.6"
pilota = "*"
protobuf = "3.2.0"
rocket = {version = "0.5.0-rc.3", features = ["json"]}
rust-crypto = "0.2.36"
serde = {version = "1.0.163", features = ["rc"]}
serde_json = "1.0.96"
time = "0.3.21"
tokio = {version = "1.28.1", features = ["full"]}
tokio-websockets = "0.3.2"
uuid = {version = "1.3.3", features = ["v4"]}
volo = "*"
volo-grpc = "*"
