[package]
edition = "2021"
name = "web-www"
version = "0.1.0"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0"
base32 = "0.5.1"
base64 = "0.22.1"
gloo-file = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
hkdf = "0.12.4"
instant = {version = "0.1.12", features = ["wasm-bindgen"]}
js-sys = "0.3.66"
log = "0.4.6"
rmp-serde = "1.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.138"
sha2 = "0.10.8"
time = {version = "0.3.21", features = ["serde", "formatting"]}
totp-lite = "2.0.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.77", features = ["HtmlCanvasElement", "HtmlTextAreaElement", "CanvasRenderingContext2d", "TextMetrics", "Navigator", "Clipboard"]}
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18"
