[package]
edition = "2021"
name = "cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastructure = {path = "../../../lib/datastructure"}
web-db = {path = "../../../server-lib/web-db"}

async-trait = "0.1.74"
dialoguer = "0.11.0"
heartstone = {path = ".."}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.35.0", features = ["full"]}
