[package]
edition = "2021"
name = "heartstone-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datastructure = {path = "../../../lib/datastructure"}
idl-gen = {path = "../../../lib/idl-gen"}
web-db = {path = "../../../server-lib/web-db"}

async-trait = "0.1.74"
clap = {version = "4.4.16", features = ["derive"]}
dialoguer = "0.11.0"
heartstone = {path = ".."}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.35.0", features = ["full"]}
protobuf = "3.3.0"
lazy_static = "1.4.0"
